<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_3"
    tools:context=".DetailAgenda">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="26sp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20sp"
                android:text="@string/name"
                android:textColor="@color/label"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblNameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10sp"
                android:text="@string/name"
                android:textColor="@color/txt"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/label"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblEmailDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10sp"
                android:text="@string/email"
                android:textColor="@color/txt"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/label"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblPhoneDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10sp"
                android:text="@string/phone"
                android:textColor="@color/txt"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remarks"
                android:textColor="@color/label"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblRemarksDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingVertical="10sp"
                android:text="@string/remarks"
                android:textColor="@color/txt"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>